# meshtui

./: .gitignore  AUTODETECT_IMPROVEMENTS.md  CHANGES.md  CHAT_USAGE.md  CLAUDE.md  README.md  UNREAD_COUNT_FIXES.md  index.html  pyproject.toml  style.css  test_connection.py
.github/: copilot-instructions.md
docs/: MESHCORE_TCP_PROXY_DESIGN.md
src/meshtui/: app.css  app.py  channel.py  connection.py  contact.py  database.py  room.py  transport.py
