[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshtui"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Textual TUI interface to meshcore companion radios"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "meshcore >= 2.1.9",
    "textual >= 0.50.0",
    "requests >= 2.28.0",
    "aiohttp >= 3.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/meshtui"
Issues = "https://github.com/yourusername/meshtui/issues"

[project.scripts]
meshtui = "meshtui.app:main"
