[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshtui"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Textual TUI interface to meshcore companion radios"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "meshcore >= 2.1.9",
    "textual >= 0.50.0",
    "requests >= 2.28.0",
    "aiohttp >= 3.9.0",
    "notify2 >= 0.3.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/meshtui"
Issues = "https://github.com/yourusername/meshtui/issues"

[project.scripts]
meshtui = "meshtui.app:main"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-cov >= 4.0.0",
    "pytest-mock >= 3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=src/meshtui",
    "--cov-report=term-missing",
    "--cov-report=html",
]
